# chrome-dinosaur-terminal

./: CMakeLists.txt  Makefile  README.md
cmake/: CompileStandardLibraryHeaderUnits.cmake  CompilerWarnings.cmake  CreateTargetLink.cmake  StandardProjectSettings.cmake
src/: game.cpp  game.h  main.cpp  objects.cpp  objects.h  obstacles.cpp  obstacles.h  player.cpp  player.h  sprites.txt
